# break-words

./: BreakWords.hs  LICENSE  Main.hs  Makefile  README.md  break-words.cabal  default.nix  sample1-input.txt
regression/: demo-output.dot  sample1-output.dot  sample2-input.txt  sample2-output.dot  words-35.txt  words-40.txt
